[package]
name = "ironcc-wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.78"
ironcc = {git = "https://github.com/lemolatoon/ironcc.git", rev="f3a9f3a"}
